--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  border-color: aquamarine;
+  border-color: rgb(41, 223, 66);
   border-style: solid;
   border-radius: 20px;
   width: 20cm;
